// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`id fields are renamed rowId when classicIds is enabled 1`] = `
type Child implements Node {
  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  id: ID!
  name: String!

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent
  parentId: UUID
  rowId: UUID!
}

"""The fields on \`child\` to look up the row to connect."""
input ChildChildPkeyConnect {
  rowId: UUID!
}

"""The fields on \`child\` to look up the row to delete."""
input ChildChildPkeyDelete {
  rowId: UUID!
}

"""
A condition to be used against \`Child\` object types. All fields are tested for equality and combined with a logical ‘and.’
"""
input ChildCondition {
  """Checks for equality with the object’s \`name\` field."""
  name: String

  """Checks for equality with the object’s \`parentId\` field."""
  parentId: UUID

  """Checks for equality with the object’s \`rowId\` field."""
  rowId: UUID
}

"""An input for mutations affecting \`Child\`"""
input ChildInput {
  name: String!
  parentId: UUID
  parentToParentId: ChildParentIdFkeyInput
  rowId: UUID
}

"""The globally unique \`ID\` look up for the row to connect."""
input ChildNodeIdConnect {
  """
  The globally unique \`ID\` which identifies a single \`child\` to be connected.
  """
  id: ID!
}

"""The globally unique \`ID\` look up for the row to delete."""
input ChildNodeIdDelete {
  """
  The globally unique \`ID\` which identifies a single \`child\` to be deleted.
  """
  id: ID!
}

"""The globally unique \`ID\` look up for the row to update."""
input ChildOnChildForChildParentIdFkeyNodeIdUpdate {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be connected.
  """
  id: ID!

  """
  An object where the defined keys will be set on the \`parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""The fields on \`child\` to look up the row to update."""
input ChildOnChildForChildParentIdFkeyUsingChildPkeyUpdate {
  """
  An object where the defined keys will be set on the \`child\` being updated.
  """
  childPatch: updateChildOnChildForChildParentIdFkeyPatch!
  rowId: UUID!
}

"""The \`child\` to be created by this mutation."""
input ChildParentIdFkeyChildCreateInput {
  name: String!
  parentId: UUID
  parentToParentId: ChildParentIdFkeyInput
  rowId: UUID
}

"""
Input for the nested mutation of \`parent\` in the \`ChildInput\` mutation.
"""
input ChildParentIdFkeyInput {
  """The primary key(s) for \`parent\` for the far side of the relationship."""
  connectById: ParentNodeIdConnect

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  connectByRowId: ParentParentPkeyConnect

  """
  A \`ParentInput\` object that will be created and connected to this object.
  """
  create: ChildParentIdFkeyParentCreateInput

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  deleteById: ParentNodeIdDelete

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  deleteByRowId: ParentParentPkeyDelete

  """
  The primary key(s) and patch data for \`parent\` for the far side of the relationship.
  """
  updateById: ChildOnChildForChildParentIdFkeyNodeIdUpdate

  """
  The primary key(s) and patch data for \`parent\` for the far side of the relationship.
  """
  updateByRowId: ParentOnChildForChildParentIdFkeyUsingParentPkeyUpdate
}

"""
Input for the nested mutation of \`child\` in the \`ParentInput\` mutation.
"""
input ChildParentIdFkeyInverseInput {
  """The primary key(s) for \`child\` for the far side of the relationship."""
  connectById: [ChildNodeIdConnect!]

  """The primary key(s) for \`child\` for the far side of the relationship."""
  connectByRowId: [ChildChildPkeyConnect!]

  """
  A \`ChildInput\` object that will be created and connected to this object.
  """
  create: [ChildParentIdFkeyChildCreateInput!]

  """The primary key(s) for \`child\` for the far side of the relationship."""
  deleteById: [ChildNodeIdDelete!]

  """The primary key(s) for \`child\` for the far side of the relationship."""
  deleteByRowId: [ChildChildPkeyDelete!]

  """
  Flag indicating whether all other \`child\` records that match this relationship should be removed.
  """
  deleteOthers: Boolean

  """
  The primary key(s) and patch data for \`child\` for the far side of the relationship.
  """
  updateById: [ParentOnChildForChildParentIdFkeyNodeIdUpdate!]

  """
  The primary key(s) and patch data for \`child\` for the far side of the relationship.
  """
  updateByRowId: [ChildOnChildForChildParentIdFkeyUsingChildPkeyUpdate!]
}

"""The \`parent\` to be created by this mutation."""
input ChildParentIdFkeyParentCreateInput {
  childrenUsingRowId: ChildParentIdFkeyInverseInput
  name: String!
  rowId: UUID
}

"""
Represents an update to a \`Child\`. Fields that are set will be updated.
"""
input ChildPatch {
  name: String
  parentId: UUID
  parentToParentId: ChildParentIdFkeyInput
  rowId: UUID
}

"""A connection to a list of \`Child\` values."""
type ChildrenConnection {
  """
  A list of edges which contains the \`Child\` and cursor to aid in pagination.
  """
  edges: [ChildrenEdge]!

  """A list of \`Child\` objects."""
  nodes: [Child]!

  """Information to aid in pagination."""
  pageInfo: PageInfo!

  """The count of *all* \`Child\` you could get from the connection."""
  totalCount: Int!
}

"""A \`Child\` edge in the connection."""
type ChildrenEdge {
  """A cursor for use in pagination."""
  cursor: Cursor

  """The \`Child\` at the end of the edge."""
  node: Child
}

"""Methods to use when ordering \`Child\`."""
enum ChildrenOrderBy {
  ID_ASC
  ID_DESC
  NAME_ASC
  NAME_DESC
  NATURAL
  PARENT_ID_ASC
  PARENT_ID_DESC
  PRIMARY_KEY_ASC
  PRIMARY_KEY_DESC
}

"""All input for the create \`Child\` mutation."""
input CreateChildInput {
  """The \`Child\` to be created by this mutation."""
  child: ChildInput!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
}

"""The output of our create \`Child\` mutation."""
type CreateChildPayload {
  """The \`Child\` that was created by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the create \`Parent\` mutation."""
input CreateParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """The \`Parent\` to be created by this mutation."""
  parent: ParentInput!
}

"""The output of our create \`Parent\` mutation."""
type CreateParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """The \`Parent\` that was created by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""A location in a connection that can be used for resuming pagination."""
scalar Cursor

"""All input for the \`deleteChildByRowId\` mutation."""
input DeleteChildByRowIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  rowId: UUID!
}

"""All input for the \`deleteChild\` mutation."""
input DeleteChildInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Child\` to be deleted.
  """
  id: ID!
}

"""The output of our delete \`Child\` mutation."""
type DeleteChildPayload {
  """The \`Child\` that was deleted by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String
  deletedChildId: ID

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the \`deleteParentByRowId\` mutation."""
input DeleteParentByRowIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  rowId: UUID!
}

"""All input for the \`deleteParent\` mutation."""
input DeleteParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Parent\` to be deleted.
  """
  id: ID!
}

"""The output of our delete \`Parent\` mutation."""
type DeleteParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String
  deletedParentId: ID

  """The \`Parent\` that was deleted by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""
The root mutation type which contains root level fields which mutate data.
"""
type Mutation {
  """Creates a single \`Child\`."""
  createChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: CreateChildInput!
  ): CreateChildPayload

  """Creates a single \`Parent\`."""
  createParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: CreateParentInput!
  ): CreateParentPayload

  """Deletes a single \`Child\` using its globally unique id."""
  deleteChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteChildInput!
  ): DeleteChildPayload

  """Deletes a single \`Child\` using a unique key."""
  deleteChildByRowId(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteChildByRowIdInput!
  ): DeleteChildPayload

  """Deletes a single \`Parent\` using its globally unique id."""
  deleteParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteParentInput!
  ): DeleteParentPayload

  """Deletes a single \`Parent\` using a unique key."""
  deleteParentByRowId(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteParentByRowIdInput!
  ): DeleteParentPayload

  """Updates a single \`Child\` using its globally unique id and a patch."""
  updateChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateChildInput!
  ): UpdateChildPayload

  """Updates a single \`Child\` using a unique key and a patch."""
  updateChildByRowId(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateChildByRowIdInput!
  ): UpdateChildPayload

  """Updates a single \`Parent\` using its globally unique id and a patch."""
  updateParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateParentInput!
  ): UpdateParentPayload

  """Updates a single \`Parent\` using a unique key and a patch."""
  updateParentByRowId(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateParentByRowIdInput!
  ): UpdateParentPayload
}

"""An object with a globally unique \`ID\`."""
interface Node {
  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  id: ID!
}

"""Information about pagination in a connection."""
type PageInfo {
  """When paginating forwards, the cursor to continue."""
  endCursor: Cursor

  """When paginating forwards, are there more items?"""
  hasNextPage: Boolean!

  """When paginating backwards, are there more items?"""
  hasPreviousPage: Boolean!

  """When paginating backwards, the cursor to continue."""
  startCursor: Cursor
}

type Parent implements Node {
  """Reads and enables pagination through a set of \`Child\`."""
  childrenByParentId(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ChildCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!] = [PRIMARY_KEY_ASC]
  ): ChildrenConnection!

  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  id: ID!
  name: String!
  rowId: UUID!
}

"""
A condition to be used against \`Parent\` object types. All fields are tested for equality and combined with a logical ‘and.’
"""
input ParentCondition {
  """Checks for equality with the object’s \`name\` field."""
  name: String

  """Checks for equality with the object’s \`rowId\` field."""
  rowId: UUID
}

"""An input for mutations affecting \`Parent\`"""
input ParentInput {
  childrenUsingRowId: ChildParentIdFkeyInverseInput
  name: String!
  rowId: UUID
}

"""The globally unique \`ID\` look up for the row to connect."""
input ParentNodeIdConnect {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be connected.
  """
  id: ID!
}

"""The globally unique \`ID\` look up for the row to delete."""
input ParentNodeIdDelete {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be deleted.
  """
  id: ID!
}

"""The globally unique \`ID\` look up for the row to update."""
input ParentOnChildForChildParentIdFkeyNodeIdUpdate {
  """
  An object where the defined keys will be set on the \`child\` being updated.
  """
  childPatch: ChildPatch!

  """
  The globally unique \`ID\` which identifies a single \`child\` to be connected.
  """
  id: ID!
}

"""The fields on \`parent\` to look up the row to update."""
input ParentOnChildForChildParentIdFkeyUsingParentPkeyUpdate {
  """
  An object where the defined keys will be set on the \`parent\` being updated.
  """
  parentPatch: updateParentOnChildForChildParentIdFkeyPatch!
  rowId: UUID!
}

"""The fields on \`parent\` to look up the row to connect."""
input ParentParentPkeyConnect {
  rowId: UUID!
}

"""The fields on \`parent\` to look up the row to delete."""
input ParentParentPkeyDelete {
  rowId: UUID!
}

"""
Represents an update to a \`Parent\`. Fields that are set will be updated.
"""
input ParentPatch {
  childrenUsingRowId: ChildParentIdFkeyInverseInput
  name: String
  rowId: UUID
}

"""A connection to a list of \`Parent\` values."""
type ParentsConnection {
  """
  A list of edges which contains the \`Parent\` and cursor to aid in pagination.
  """
  edges: [ParentsEdge]!

  """A list of \`Parent\` objects."""
  nodes: [Parent]!

  """Information to aid in pagination."""
  pageInfo: PageInfo!

  """The count of *all* \`Parent\` you could get from the connection."""
  totalCount: Int!
}

"""A \`Parent\` edge in the connection."""
type ParentsEdge {
  """A cursor for use in pagination."""
  cursor: Cursor

  """The \`Parent\` at the end of the edge."""
  node: Parent
}

"""Methods to use when ordering \`Parent\`."""
enum ParentsOrderBy {
  ID_ASC
  ID_DESC
  NAME_ASC
  NAME_DESC
  NATURAL
  PRIMARY_KEY_ASC
  PRIMARY_KEY_DESC
}

"""The root query type which gives access points into the data universe."""
type Query implements Node {
  """Reads and enables pagination through a set of \`Child\`."""
  allChildren(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ChildCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!] = [PRIMARY_KEY_ASC]
  ): ChildrenConnection

  """Reads and enables pagination through a set of \`Parent\`."""
  allParents(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ParentCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!] = [PRIMARY_KEY_ASC]
  ): ParentsConnection

  """Reads a single \`Child\` using its globally unique \`ID\`."""
  child(
    """The globally unique \`ID\` to be used in selecting a single \`Child\`."""
    id: ID!
  ): Child

  """Get a single \`Child\`."""
  childByRowId(rowId: UUID!): Child

  """
  The root query type must be a \`Node\` to work well with Relay 1 mutations. This just resolves to \`query\`.
  """
  id: ID!

  """Fetches an object given its globally unique \`ID\`."""
  node(
    """The globally unique \`ID\`."""
    id: ID!
  ): Node

  """Reads a single \`Parent\` using its globally unique \`ID\`."""
  parent(
    """The globally unique \`ID\` to be used in selecting a single \`Parent\`."""
    id: ID!
  ): Parent

  """Get a single \`Parent\`."""
  parentByRowId(rowId: UUID!): Parent

  """
  Exposes the root query type nested one level down. This is helpful for Relay 1
  which can only query top level fields if they are in a particular form.
  """
  query: Query!
}

"""
A universally unique identifier as defined by [RFC 4122](https://tools.ietf.org/html/rfc4122).
"""
scalar UUID

"""All input for the \`updateChildByRowId\` mutation."""
input UpdateChildByRowIdInput {
  """
  An object where the defined keys will be set on the \`Child\` being updated.
  """
  childPatch: ChildPatch!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  rowId: UUID!
}

"""All input for the \`updateChild\` mutation."""
input UpdateChildInput {
  """
  An object where the defined keys will be set on the \`Child\` being updated.
  """
  childPatch: ChildPatch!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Child\` to be updated.
  """
  id: ID!
}

"""The output of our update \`Child\` mutation."""
type UpdateChildPayload {
  """The \`Child\` that was updated by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the \`updateParentByRowId\` mutation."""
input UpdateParentByRowIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  An object where the defined keys will be set on the \`Parent\` being updated.
  """
  parentPatch: ParentPatch!
  rowId: UUID!
}

"""All input for the \`updateParent\` mutation."""
input UpdateParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Parent\` to be updated.
  """
  id: ID!

  """
  An object where the defined keys will be set on the \`Parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""The output of our update \`Parent\` mutation."""
type UpdateParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """The \`Parent\` that was updated by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""
An object where the defined keys will be set on the \`child\` being updated.
"""
input updateChildOnChildForChildParentIdFkeyPatch {
  name: String
  parentToParentId: ChildParentIdFkeyInput
  rowId: UUID
}

"""
An object where the defined keys will be set on the \`parent\` being updated.
"""
input updateParentOnChildForChildParentIdFkeyPatch {
  childrenUsingRowId: ChildParentIdFkeyInverseInput
  name: String
  rowId: UUID
}
`;

exports[`simple names, plural when one-to-many, singular in reverse 1`] = `
type Child implements Node {
  id: Int!
  name: String!

  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  nodeId: ID!

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent
  parentId: Int
}

"""The fields on \`child\` to look up the row to connect."""
input ChildChildPkeyConnect {
  id: Int!
}

"""The fields on \`child\` to look up the row to delete."""
input ChildChildPkeyDelete {
  id: Int!
}

"""
A condition to be used against \`Child\` object types. All fields are tested for equality and combined with a logical ‘and.’
"""
input ChildCondition {
  """Checks for equality with the object’s \`id\` field."""
  id: Int

  """Checks for equality with the object’s \`name\` field."""
  name: String

  """Checks for equality with the object’s \`parentId\` field."""
  parentId: Int
}

"""An input for mutations affecting \`Child\`"""
input ChildInput {
  id: Int
  name: String!
  parent: ChildParentFkeyInput
  parentId: Int
}

"""The globally unique \`ID\` look up for the row to connect."""
input ChildNodeIdConnect {
  """
  The globally unique \`ID\` which identifies a single \`child\` to be connected.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to delete."""
input ChildNodeIdDelete {
  """
  The globally unique \`ID\` which identifies a single \`child\` to be deleted.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to update."""
input ChildOnChildForChildParentFkeyNodeIdUpdate {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be connected.
  """
  nodeId: ID!

  """
  An object where the defined keys will be set on the \`parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""The fields on \`child\` to look up the row to update."""
input ChildOnChildForChildParentFkeyUsingChildPkeyUpdate {
  """
  An object where the defined keys will be set on the \`child\` being updated.
  """
  childPatch: updateChildOnChildForChildParentFkeyPatch!
  id: Int!
}

"""The \`child\` to be created by this mutation."""
input ChildParentFkeyChildCreateInput {
  id: Int
  name: String!
  parent: ChildParentFkeyInput
  parentId: Int
}

"""
Input for the nested mutation of \`parent\` in the \`ChildInput\` mutation.
"""
input ChildParentFkeyInput {
  """The primary key(s) for \`parent\` for the far side of the relationship."""
  connectById: ParentParentPkeyConnect

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  connectByNodeId: ParentNodeIdConnect

  """
  A \`ParentInput\` object that will be created and connected to this object.
  """
  create: ChildParentFkeyParentCreateInput

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  deleteById: ParentParentPkeyDelete

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  deleteByNodeId: ParentNodeIdDelete

  """
  The primary key(s) and patch data for \`parent\` for the far side of the relationship.
  """
  updateById: ParentOnChildForChildParentFkeyUsingParentPkeyUpdate

  """
  The primary key(s) and patch data for \`parent\` for the far side of the relationship.
  """
  updateByNodeId: ChildOnChildForChildParentFkeyNodeIdUpdate
}

"""
Input for the nested mutation of \`child\` in the \`ParentInput\` mutation.
"""
input ChildParentFkeyInverseInput {
  """The primary key(s) for \`child\` for the far side of the relationship."""
  connectById: [ChildChildPkeyConnect!]

  """The primary key(s) for \`child\` for the far side of the relationship."""
  connectByNodeId: [ChildNodeIdConnect!]

  """
  A \`ChildInput\` object that will be created and connected to this object.
  """
  create: [ChildParentFkeyChildCreateInput!]

  """The primary key(s) for \`child\` for the far side of the relationship."""
  deleteById: [ChildChildPkeyDelete!]

  """The primary key(s) for \`child\` for the far side of the relationship."""
  deleteByNodeId: [ChildNodeIdDelete!]

  """
  Flag indicating whether all other \`child\` records that match this relationship should be removed.
  """
  deleteOthers: Boolean

  """
  The primary key(s) and patch data for \`child\` for the far side of the relationship.
  """
  updateById: [ChildOnChildForChildParentFkeyUsingChildPkeyUpdate!]

  """
  The primary key(s) and patch data for \`child\` for the far side of the relationship.
  """
  updateByNodeId: [ParentOnChildForChildParentFkeyNodeIdUpdate!]
}

"""The \`parent\` to be created by this mutation."""
input ChildParentFkeyParentCreateInput {
  children: ChildParentFkeyInverseInput
  id: Int
  name: String!
}

"""
Represents an update to a \`Child\`. Fields that are set will be updated.
"""
input ChildPatch {
  id: Int
  name: String
  parent: ChildParentFkeyInput
  parentId: Int
}

"""A connection to a list of \`Child\` values."""
type ChildrenConnection {
  """
  A list of edges which contains the \`Child\` and cursor to aid in pagination.
  """
  edges: [ChildrenEdge]!

  """A list of \`Child\` objects."""
  nodes: [Child]!

  """Information to aid in pagination."""
  pageInfo: PageInfo!

  """The count of *all* \`Child\` you could get from the connection."""
  totalCount: Int!
}

"""A \`Child\` edge in the connection."""
type ChildrenEdge {
  """A cursor for use in pagination."""
  cursor: Cursor

  """The \`Child\` at the end of the edge."""
  node: Child
}

"""Methods to use when ordering \`Child\`."""
enum ChildrenOrderBy {
  ID_ASC
  ID_DESC
  NAME_ASC
  NAME_DESC
  NATURAL
  PARENT_ID_ASC
  PARENT_ID_DESC
  PRIMARY_KEY_ASC
  PRIMARY_KEY_DESC
}

"""All input for the create \`Child\` mutation."""
input CreateChildInput {
  """The \`Child\` to be created by this mutation."""
  child: ChildInput!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
}

"""The output of our create \`Child\` mutation."""
type CreateChildPayload {
  """The \`Child\` that was created by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the create \`Parent\` mutation."""
input CreateParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """The \`Parent\` to be created by this mutation."""
  parent: ParentInput!
}

"""The output of our create \`Parent\` mutation."""
type CreateParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """The \`Parent\` that was created by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""A location in a connection that can be used for resuming pagination."""
scalar Cursor

"""All input for the \`deleteChildById\` mutation."""
input DeleteChildByIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  id: Int!
}

"""All input for the \`deleteChild\` mutation."""
input DeleteChildInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Child\` to be deleted.
  """
  nodeId: ID!
}

"""The output of our delete \`Child\` mutation."""
type DeleteChildPayload {
  """The \`Child\` that was deleted by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String
  deletedChildId: ID

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the \`deleteParentById\` mutation."""
input DeleteParentByIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  id: Int!
}

"""All input for the \`deleteParent\` mutation."""
input DeleteParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Parent\` to be deleted.
  """
  nodeId: ID!
}

"""The output of our delete \`Parent\` mutation."""
type DeleteParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String
  deletedParentId: ID

  """The \`Parent\` that was deleted by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""
The root mutation type which contains root level fields which mutate data.
"""
type Mutation {
  """Creates a single \`Child\`."""
  createChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: CreateChildInput!
  ): CreateChildPayload

  """Creates a single \`Parent\`."""
  createParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: CreateParentInput!
  ): CreateParentPayload

  """Deletes a single \`Child\` using its globally unique id."""
  deleteChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteChildInput!
  ): DeleteChildPayload

  """Deletes a single \`Child\` using a unique key."""
  deleteChildById(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteChildByIdInput!
  ): DeleteChildPayload

  """Deletes a single \`Parent\` using its globally unique id."""
  deleteParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteParentInput!
  ): DeleteParentPayload

  """Deletes a single \`Parent\` using a unique key."""
  deleteParentById(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteParentByIdInput!
  ): DeleteParentPayload

  """Updates a single \`Child\` using its globally unique id and a patch."""
  updateChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateChildInput!
  ): UpdateChildPayload

  """Updates a single \`Child\` using a unique key and a patch."""
  updateChildById(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateChildByIdInput!
  ): UpdateChildPayload

  """Updates a single \`Parent\` using its globally unique id and a patch."""
  updateParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateParentInput!
  ): UpdateParentPayload

  """Updates a single \`Parent\` using a unique key and a patch."""
  updateParentById(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateParentByIdInput!
  ): UpdateParentPayload
}

"""An object with a globally unique \`ID\`."""
interface Node {
  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  nodeId: ID!
}

"""Information about pagination in a connection."""
type PageInfo {
  """When paginating forwards, the cursor to continue."""
  endCursor: Cursor

  """When paginating forwards, are there more items?"""
  hasNextPage: Boolean!

  """When paginating backwards, are there more items?"""
  hasPreviousPage: Boolean!

  """When paginating backwards, the cursor to continue."""
  startCursor: Cursor
}

type Parent implements Node {
  """Reads and enables pagination through a set of \`Child\`."""
  childrenByParentId(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ChildCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!] = [PRIMARY_KEY_ASC]
  ): ChildrenConnection!
  id: Int!
  name: String!

  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  nodeId: ID!
}

"""
A condition to be used against \`Parent\` object types. All fields are tested for equality and combined with a logical ‘and.’
"""
input ParentCondition {
  """Checks for equality with the object’s \`id\` field."""
  id: Int

  """Checks for equality with the object’s \`name\` field."""
  name: String
}

"""An input for mutations affecting \`Parent\`"""
input ParentInput {
  children: ChildParentFkeyInverseInput
  id: Int
  name: String!
}

"""The globally unique \`ID\` look up for the row to connect."""
input ParentNodeIdConnect {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be connected.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to delete."""
input ParentNodeIdDelete {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be deleted.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to update."""
input ParentOnChildForChildParentFkeyNodeIdUpdate {
  """
  An object where the defined keys will be set on the \`child\` being updated.
  """
  childPatch: ChildPatch!

  """
  The globally unique \`ID\` which identifies a single \`child\` to be connected.
  """
  nodeId: ID!
}

"""The fields on \`parent\` to look up the row to update."""
input ParentOnChildForChildParentFkeyUsingParentPkeyUpdate {
  id: Int!

  """
  An object where the defined keys will be set on the \`parent\` being updated.
  """
  parentPatch: updateParentOnChildForChildParentFkeyPatch!
}

"""The fields on \`parent\` to look up the row to connect."""
input ParentParentPkeyConnect {
  id: Int!
}

"""The fields on \`parent\` to look up the row to delete."""
input ParentParentPkeyDelete {
  id: Int!
}

"""
Represents an update to a \`Parent\`. Fields that are set will be updated.
"""
input ParentPatch {
  children: ChildParentFkeyInverseInput
  id: Int
  name: String
}

"""A connection to a list of \`Parent\` values."""
type ParentsConnection {
  """
  A list of edges which contains the \`Parent\` and cursor to aid in pagination.
  """
  edges: [ParentsEdge]!

  """A list of \`Parent\` objects."""
  nodes: [Parent]!

  """Information to aid in pagination."""
  pageInfo: PageInfo!

  """The count of *all* \`Parent\` you could get from the connection."""
  totalCount: Int!
}

"""A \`Parent\` edge in the connection."""
type ParentsEdge {
  """A cursor for use in pagination."""
  cursor: Cursor

  """The \`Parent\` at the end of the edge."""
  node: Parent
}

"""Methods to use when ordering \`Parent\`."""
enum ParentsOrderBy {
  ID_ASC
  ID_DESC
  NAME_ASC
  NAME_DESC
  NATURAL
  PRIMARY_KEY_ASC
  PRIMARY_KEY_DESC
}

"""The root query type which gives access points into the data universe."""
type Query implements Node {
  """Reads and enables pagination through a set of \`Child\`."""
  allChildren(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ChildCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!] = [PRIMARY_KEY_ASC]
  ): ChildrenConnection

  """Reads and enables pagination through a set of \`Parent\`."""
  allParents(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ParentCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!] = [PRIMARY_KEY_ASC]
  ): ParentsConnection

  """Reads a single \`Child\` using its globally unique \`ID\`."""
  child(
    """The globally unique \`ID\` to be used in selecting a single \`Child\`."""
    nodeId: ID!
  ): Child

  """Get a single \`Child\`."""
  childById(id: Int!): Child

  """Fetches an object given its globally unique \`ID\`."""
  node(
    """The globally unique \`ID\`."""
    nodeId: ID!
  ): Node

  """
  The root query type must be a \`Node\` to work well with Relay 1 mutations. This just resolves to \`query\`.
  """
  nodeId: ID!

  """Reads a single \`Parent\` using its globally unique \`ID\`."""
  parent(
    """The globally unique \`ID\` to be used in selecting a single \`Parent\`."""
    nodeId: ID!
  ): Parent

  """Get a single \`Parent\`."""
  parentById(id: Int!): Parent

  """
  Exposes the root query type nested one level down. This is helpful for Relay 1
  which can only query top level fields if they are in a particular form.
  """
  query: Query!
}

"""All input for the \`updateChildById\` mutation."""
input UpdateChildByIdInput {
  """
  An object where the defined keys will be set on the \`Child\` being updated.
  """
  childPatch: ChildPatch!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  id: Int!
}

"""All input for the \`updateChild\` mutation."""
input UpdateChildInput {
  """
  An object where the defined keys will be set on the \`Child\` being updated.
  """
  childPatch: ChildPatch!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Child\` to be updated.
  """
  nodeId: ID!
}

"""The output of our update \`Child\` mutation."""
type UpdateChildPayload {
  """The \`Child\` that was updated by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the \`updateParentById\` mutation."""
input UpdateParentByIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  id: Int!

  """
  An object where the defined keys will be set on the \`Parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""All input for the \`updateParent\` mutation."""
input UpdateParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Parent\` to be updated.
  """
  nodeId: ID!

  """
  An object where the defined keys will be set on the \`Parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""The output of our update \`Parent\` mutation."""
type UpdateParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """The \`Parent\` that was updated by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""
An object where the defined keys will be set on the \`child\` being updated.
"""
input updateChildOnChildForChildParentFkeyPatch {
  id: Int
  name: String
  parent: ChildParentFkeyInput
}

"""
An object where the defined keys will be set on the \`parent\` being updated.
"""
input updateParentOnChildForChildParentFkeyPatch {
  children: ChildParentFkeyInverseInput
  id: Int
  name: String
}
`;

exports[`simple names, singular when one-to-one 1`] = `
type Child implements Node {
  name: String!

  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  nodeId: ID!

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent
  parentId: Int!
}

"""The fields on \`child\` to look up the row to connect."""
input ChildChildPkeyConnect {
  parentId: Int!
}

"""The fields on \`child\` to look up the row to delete."""
input ChildChildPkeyDelete {
  parentId: Int!
}

"""
A condition to be used against \`Child\` object types. All fields are tested for equality and combined with a logical ‘and.’
"""
input ChildCondition {
  """Checks for equality with the object’s \`name\` field."""
  name: String

  """Checks for equality with the object’s \`parentId\` field."""
  parentId: Int
}

"""An input for mutations affecting \`Child\`"""
input ChildInput {
  name: String!
  parent: ChildParentFkeyInput
  parentId: Int
}

"""The globally unique \`ID\` look up for the row to connect."""
input ChildNodeIdConnect {
  """
  The globally unique \`ID\` which identifies a single \`child\` to be connected.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to delete."""
input ChildNodeIdDelete {
  """
  The globally unique \`ID\` which identifies a single \`child\` to be deleted.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to update."""
input ChildOnChildForChildParentFkeyNodeIdUpdate {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be connected.
  """
  nodeId: ID!

  """
  An object where the defined keys will be set on the \`parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""The fields on \`child\` to look up the row to update."""
input ChildOnChildForChildParentFkeyUsingChildPkeyUpdate {
  """
  An object where the defined keys will be set on the \`child\` being updated.
  """
  childPatch: updateChildOnChildForChildParentFkeyPatch!
  parentId: Int!
}

"""The \`child\` to be created by this mutation."""
input ChildParentFkeyChildCreateInput {
  name: String!
  parent: ChildParentFkeyInput
  parentId: Int
}

"""
Input for the nested mutation of \`parent\` in the \`ChildInput\` mutation.
"""
input ChildParentFkeyInput {
  """The primary key(s) for \`parent\` for the far side of the relationship."""
  connectById: ParentParentPkeyConnect

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  connectByNodeId: ParentNodeIdConnect

  """
  A \`ParentInput\` object that will be created and connected to this object.
  """
  create: ChildParentFkeyParentCreateInput

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  deleteById: ParentParentPkeyDelete

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  deleteByNodeId: ParentNodeIdDelete

  """
  The primary key(s) and patch data for \`parent\` for the far side of the relationship.
  """
  updateById: ParentOnChildForChildParentFkeyUsingParentPkeyUpdate

  """
  The primary key(s) and patch data for \`parent\` for the far side of the relationship.
  """
  updateByNodeId: ChildOnChildForChildParentFkeyNodeIdUpdate
}

"""
Input for the nested mutation of \`child\` in the \`ParentInput\` mutation.
"""
input ChildParentFkeyInverseInput {
  """The primary key(s) for \`child\` for the far side of the relationship."""
  connectByNodeId: ChildNodeIdConnect

  """The primary key(s) for \`child\` for the far side of the relationship."""
  connectByParentId: ChildChildPkeyConnect

  """
  A \`ChildInput\` object that will be created and connected to this object.
  """
  create: [ChildParentFkeyChildCreateInput!]

  """The primary key(s) for \`child\` for the far side of the relationship."""
  deleteByNodeId: ChildNodeIdDelete

  """The primary key(s) for \`child\` for the far side of the relationship."""
  deleteByParentId: ChildChildPkeyDelete

  """
  Flag indicating whether all other \`child\` records that match this relationship should be removed.
  """
  deleteOthers: Boolean

  """
  The primary key(s) and patch data for \`child\` for the far side of the relationship.
  """
  updateByNodeId: ParentOnChildForChildParentFkeyNodeIdUpdate

  """
  The primary key(s) and patch data for \`child\` for the far side of the relationship.
  """
  updateByParentId: ChildOnChildForChildParentFkeyUsingChildPkeyUpdate
}

"""The \`parent\` to be created by this mutation."""
input ChildParentFkeyParentCreateInput {
  child: ChildParentFkeyInverseInput
  id: Int
  name: String!
}

"""
Represents an update to a \`Child\`. Fields that are set will be updated.
"""
input ChildPatch {
  name: String
  parent: ChildParentFkeyInput
  parentId: Int
}

"""A connection to a list of \`Child\` values."""
type ChildrenConnection {
  """
  A list of edges which contains the \`Child\` and cursor to aid in pagination.
  """
  edges: [ChildrenEdge]!

  """A list of \`Child\` objects."""
  nodes: [Child]!

  """Information to aid in pagination."""
  pageInfo: PageInfo!

  """The count of *all* \`Child\` you could get from the connection."""
  totalCount: Int!
}

"""A \`Child\` edge in the connection."""
type ChildrenEdge {
  """A cursor for use in pagination."""
  cursor: Cursor

  """The \`Child\` at the end of the edge."""
  node: Child
}

"""Methods to use when ordering \`Child\`."""
enum ChildrenOrderBy {
  NAME_ASC
  NAME_DESC
  NATURAL
  PARENT_ID_ASC
  PARENT_ID_DESC
  PRIMARY_KEY_ASC
  PRIMARY_KEY_DESC
}

"""All input for the create \`Child\` mutation."""
input CreateChildInput {
  """The \`Child\` to be created by this mutation."""
  child: ChildInput!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
}

"""The output of our create \`Child\` mutation."""
type CreateChildPayload {
  """The \`Child\` that was created by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the create \`Parent\` mutation."""
input CreateParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """The \`Parent\` to be created by this mutation."""
  parent: ParentInput!
}

"""The output of our create \`Parent\` mutation."""
type CreateParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """The \`Parent\` that was created by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""A location in a connection that can be used for resuming pagination."""
scalar Cursor

"""All input for the \`deleteChildByParentId\` mutation."""
input DeleteChildByParentIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  parentId: Int!
}

"""All input for the \`deleteChild\` mutation."""
input DeleteChildInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Child\` to be deleted.
  """
  nodeId: ID!
}

"""The output of our delete \`Child\` mutation."""
type DeleteChildPayload {
  """The \`Child\` that was deleted by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String
  deletedChildId: ID

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the \`deleteParentById\` mutation."""
input DeleteParentByIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  id: Int!
}

"""All input for the \`deleteParent\` mutation."""
input DeleteParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Parent\` to be deleted.
  """
  nodeId: ID!
}

"""The output of our delete \`Parent\` mutation."""
type DeleteParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String
  deletedParentId: ID

  """The \`Parent\` that was deleted by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""
The root mutation type which contains root level fields which mutate data.
"""
type Mutation {
  """Creates a single \`Child\`."""
  createChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: CreateChildInput!
  ): CreateChildPayload

  """Creates a single \`Parent\`."""
  createParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: CreateParentInput!
  ): CreateParentPayload

  """Deletes a single \`Child\` using its globally unique id."""
  deleteChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteChildInput!
  ): DeleteChildPayload

  """Deletes a single \`Child\` using a unique key."""
  deleteChildByParentId(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteChildByParentIdInput!
  ): DeleteChildPayload

  """Deletes a single \`Parent\` using its globally unique id."""
  deleteParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteParentInput!
  ): DeleteParentPayload

  """Deletes a single \`Parent\` using a unique key."""
  deleteParentById(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteParentByIdInput!
  ): DeleteParentPayload

  """Updates a single \`Child\` using its globally unique id and a patch."""
  updateChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateChildInput!
  ): UpdateChildPayload

  """Updates a single \`Child\` using a unique key and a patch."""
  updateChildByParentId(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateChildByParentIdInput!
  ): UpdateChildPayload

  """Updates a single \`Parent\` using its globally unique id and a patch."""
  updateParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateParentInput!
  ): UpdateParentPayload

  """Updates a single \`Parent\` using a unique key and a patch."""
  updateParentById(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateParentByIdInput!
  ): UpdateParentPayload
}

"""An object with a globally unique \`ID\`."""
interface Node {
  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  nodeId: ID!
}

"""Information about pagination in a connection."""
type PageInfo {
  """When paginating forwards, the cursor to continue."""
  endCursor: Cursor

  """When paginating forwards, are there more items?"""
  hasNextPage: Boolean!

  """When paginating backwards, are there more items?"""
  hasPreviousPage: Boolean!

  """When paginating backwards, the cursor to continue."""
  startCursor: Cursor
}

type Parent implements Node {
  """Reads a single \`Child\` that is related to this \`Parent\`."""
  childByParentId: Child
  id: Int!
  name: String!

  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  nodeId: ID!
}

"""
A condition to be used against \`Parent\` object types. All fields are tested for equality and combined with a logical ‘and.’
"""
input ParentCondition {
  """Checks for equality with the object’s \`id\` field."""
  id: Int

  """Checks for equality with the object’s \`name\` field."""
  name: String
}

"""An input for mutations affecting \`Parent\`"""
input ParentInput {
  child: ChildParentFkeyInverseInput
  id: Int
  name: String!
}

"""The globally unique \`ID\` look up for the row to connect."""
input ParentNodeIdConnect {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be connected.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to delete."""
input ParentNodeIdDelete {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be deleted.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to update."""
input ParentOnChildForChildParentFkeyNodeIdUpdate {
  """
  An object where the defined keys will be set on the \`child\` being updated.
  """
  childPatch: ChildPatch!

  """
  The globally unique \`ID\` which identifies a single \`child\` to be connected.
  """
  nodeId: ID!
}

"""The fields on \`parent\` to look up the row to update."""
input ParentOnChildForChildParentFkeyUsingParentPkeyUpdate {
  id: Int!

  """
  An object where the defined keys will be set on the \`parent\` being updated.
  """
  parentPatch: updateParentOnChildForChildParentFkeyPatch!
}

"""The fields on \`parent\` to look up the row to connect."""
input ParentParentPkeyConnect {
  id: Int!
}

"""The fields on \`parent\` to look up the row to delete."""
input ParentParentPkeyDelete {
  id: Int!
}

"""
Represents an update to a \`Parent\`. Fields that are set will be updated.
"""
input ParentPatch {
  child: ChildParentFkeyInverseInput
  id: Int
  name: String
}

"""A connection to a list of \`Parent\` values."""
type ParentsConnection {
  """
  A list of edges which contains the \`Parent\` and cursor to aid in pagination.
  """
  edges: [ParentsEdge]!

  """A list of \`Parent\` objects."""
  nodes: [Parent]!

  """Information to aid in pagination."""
  pageInfo: PageInfo!

  """The count of *all* \`Parent\` you could get from the connection."""
  totalCount: Int!
}

"""A \`Parent\` edge in the connection."""
type ParentsEdge {
  """A cursor for use in pagination."""
  cursor: Cursor

  """The \`Parent\` at the end of the edge."""
  node: Parent
}

"""Methods to use when ordering \`Parent\`."""
enum ParentsOrderBy {
  ID_ASC
  ID_DESC
  NAME_ASC
  NAME_DESC
  NATURAL
  PRIMARY_KEY_ASC
  PRIMARY_KEY_DESC
}

"""The root query type which gives access points into the data universe."""
type Query implements Node {
  """Reads and enables pagination through a set of \`Child\`."""
  allChildren(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ChildCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!] = [PRIMARY_KEY_ASC]
  ): ChildrenConnection

  """Reads and enables pagination through a set of \`Parent\`."""
  allParents(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ParentCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!] = [PRIMARY_KEY_ASC]
  ): ParentsConnection

  """Reads a single \`Child\` using its globally unique \`ID\`."""
  child(
    """The globally unique \`ID\` to be used in selecting a single \`Child\`."""
    nodeId: ID!
  ): Child

  """Get a single \`Child\`."""
  childByParentId(parentId: Int!): Child

  """Fetches an object given its globally unique \`ID\`."""
  node(
    """The globally unique \`ID\`."""
    nodeId: ID!
  ): Node

  """
  The root query type must be a \`Node\` to work well with Relay 1 mutations. This just resolves to \`query\`.
  """
  nodeId: ID!

  """Reads a single \`Parent\` using its globally unique \`ID\`."""
  parent(
    """The globally unique \`ID\` to be used in selecting a single \`Parent\`."""
    nodeId: ID!
  ): Parent

  """Get a single \`Parent\`."""
  parentById(id: Int!): Parent

  """
  Exposes the root query type nested one level down. This is helpful for Relay 1
  which can only query top level fields if they are in a particular form.
  """
  query: Query!
}

"""All input for the \`updateChildByParentId\` mutation."""
input UpdateChildByParentIdInput {
  """
  An object where the defined keys will be set on the \`Child\` being updated.
  """
  childPatch: ChildPatch!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  parentId: Int!
}

"""All input for the \`updateChild\` mutation."""
input UpdateChildInput {
  """
  An object where the defined keys will be set on the \`Child\` being updated.
  """
  childPatch: ChildPatch!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Child\` to be updated.
  """
  nodeId: ID!
}

"""The output of our update \`Child\` mutation."""
type UpdateChildPayload {
  """The \`Child\` that was updated by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the \`updateParentById\` mutation."""
input UpdateParentByIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  id: Int!

  """
  An object where the defined keys will be set on the \`Parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""All input for the \`updateParent\` mutation."""
input UpdateParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Parent\` to be updated.
  """
  nodeId: ID!

  """
  An object where the defined keys will be set on the \`Parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""The output of our update \`Parent\` mutation."""
type UpdateParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """The \`Parent\` that was updated by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""
An object where the defined keys will be set on the \`child\` being updated.
"""
input updateChildOnChildForChildParentFkeyPatch {
  name: String
  parent: ChildParentFkeyInput
}

"""
An object where the defined keys will be set on the \`parent\` being updated.
"""
input updateParentOnChildForChildParentFkeyPatch {
  child: ChildParentFkeyInverseInput
  id: Int
  name: String
}
`;

exports[`still plural when one-to-one if nestedMutationsOldUniqueFields is enabled 1`] = `
type Child implements Node {
  name: String!

  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  nodeId: ID!

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent
  parentId: Int!
}

"""The fields on \`child\` to look up the row to connect."""
input ChildChildPkeyConnect {
  parentId: Int!
}

"""The fields on \`child\` to look up the row to delete."""
input ChildChildPkeyDelete {
  parentId: Int!
}

"""
A condition to be used against \`Child\` object types. All fields are tested for equality and combined with a logical ‘and.’
"""
input ChildCondition {
  """Checks for equality with the object’s \`name\` field."""
  name: String

  """Checks for equality with the object’s \`parentId\` field."""
  parentId: Int
}

"""An input for mutations affecting \`Child\`"""
input ChildInput {
  name: String!
  parentId: Int
  parentToParentId: ChildParentFkeyInput
}

"""The globally unique \`ID\` look up for the row to connect."""
input ChildNodeIdConnect {
  """
  The globally unique \`ID\` which identifies a single \`child\` to be connected.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to delete."""
input ChildNodeIdDelete {
  """
  The globally unique \`ID\` which identifies a single \`child\` to be deleted.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to update."""
input ChildOnChildForChildParentFkeyNodeIdUpdate {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be connected.
  """
  nodeId: ID!

  """
  An object where the defined keys will be set on the \`parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""The fields on \`child\` to look up the row to update."""
input ChildOnChildForChildParentFkeyUsingChildPkeyUpdate {
  """
  An object where the defined keys will be set on the \`child\` being updated.
  """
  childPatch: updateChildOnChildForChildParentFkeyPatch!
  parentId: Int!
}

"""The \`child\` to be created by this mutation."""
input ChildParentFkeyChildCreateInput {
  name: String!
  parentId: Int
  parentToParentId: ChildParentFkeyInput
}

"""
Input for the nested mutation of \`parent\` in the \`ChildInput\` mutation.
"""
input ChildParentFkeyInput {
  """The primary key(s) for \`parent\` for the far side of the relationship."""
  connectById: ParentParentPkeyConnect

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  connectByNodeId: ParentNodeIdConnect

  """
  A \`ParentInput\` object that will be created and connected to this object.
  """
  create: ChildParentFkeyParentCreateInput

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  deleteById: ParentParentPkeyDelete

  """The primary key(s) for \`parent\` for the far side of the relationship."""
  deleteByNodeId: ParentNodeIdDelete

  """
  The primary key(s) and patch data for \`parent\` for the far side of the relationship.
  """
  updateById: ParentOnChildForChildParentFkeyUsingParentPkeyUpdate

  """
  The primary key(s) and patch data for \`parent\` for the far side of the relationship.
  """
  updateByNodeId: ChildOnChildForChildParentFkeyNodeIdUpdate
}

"""
Input for the nested mutation of \`child\` in the \`ParentInput\` mutation.
"""
input ChildParentFkeyInverseInput {
  """The primary key(s) for \`child\` for the far side of the relationship."""
  connectByNodeId: ChildNodeIdConnect

  """The primary key(s) for \`child\` for the far side of the relationship."""
  connectByParentId: ChildChildPkeyConnect

  """
  A \`ChildInput\` object that will be created and connected to this object.
  """
  create: [ChildParentFkeyChildCreateInput!]

  """The primary key(s) for \`child\` for the far side of the relationship."""
  deleteByNodeId: ChildNodeIdDelete

  """The primary key(s) for \`child\` for the far side of the relationship."""
  deleteByParentId: ChildChildPkeyDelete

  """
  Flag indicating whether all other \`child\` records that match this relationship should be removed.
  """
  deleteOthers: Boolean

  """
  The primary key(s) and patch data for \`child\` for the far side of the relationship.
  """
  updateByNodeId: ParentOnChildForChildParentFkeyNodeIdUpdate

  """
  The primary key(s) and patch data for \`child\` for the far side of the relationship.
  """
  updateByParentId: ChildOnChildForChildParentFkeyUsingChildPkeyUpdate
}

"""The \`parent\` to be created by this mutation."""
input ChildParentFkeyParentCreateInput {
  childrenUsingId: ChildParentFkeyInverseInput
  id: Int
  name: String!
}

"""
Represents an update to a \`Child\`. Fields that are set will be updated.
"""
input ChildPatch {
  name: String
  parentId: Int
  parentToParentId: ChildParentFkeyInput
}

"""A connection to a list of \`Child\` values."""
type ChildrenConnection {
  """
  A list of edges which contains the \`Child\` and cursor to aid in pagination.
  """
  edges: [ChildrenEdge]!

  """A list of \`Child\` objects."""
  nodes: [Child]!

  """Information to aid in pagination."""
  pageInfo: PageInfo!

  """The count of *all* \`Child\` you could get from the connection."""
  totalCount: Int!
}

"""A \`Child\` edge in the connection."""
type ChildrenEdge {
  """A cursor for use in pagination."""
  cursor: Cursor

  """The \`Child\` at the end of the edge."""
  node: Child
}

"""Methods to use when ordering \`Child\`."""
enum ChildrenOrderBy {
  NAME_ASC
  NAME_DESC
  NATURAL
  PARENT_ID_ASC
  PARENT_ID_DESC
  PRIMARY_KEY_ASC
  PRIMARY_KEY_DESC
}

"""All input for the create \`Child\` mutation."""
input CreateChildInput {
  """The \`Child\` to be created by this mutation."""
  child: ChildInput!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
}

"""The output of our create \`Child\` mutation."""
type CreateChildPayload {
  """The \`Child\` that was created by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the create \`Parent\` mutation."""
input CreateParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """The \`Parent\` to be created by this mutation."""
  parent: ParentInput!
}

"""The output of our create \`Parent\` mutation."""
type CreateParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """The \`Parent\` that was created by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""A location in a connection that can be used for resuming pagination."""
scalar Cursor

"""All input for the \`deleteChildByParentId\` mutation."""
input DeleteChildByParentIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  parentId: Int!
}

"""All input for the \`deleteChild\` mutation."""
input DeleteChildInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Child\` to be deleted.
  """
  nodeId: ID!
}

"""The output of our delete \`Child\` mutation."""
type DeleteChildPayload {
  """The \`Child\` that was deleted by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String
  deletedChildId: ID

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the \`deleteParentById\` mutation."""
input DeleteParentByIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  id: Int!
}

"""All input for the \`deleteParent\` mutation."""
input DeleteParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Parent\` to be deleted.
  """
  nodeId: ID!
}

"""The output of our delete \`Parent\` mutation."""
type DeleteParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String
  deletedParentId: ID

  """The \`Parent\` that was deleted by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""
The root mutation type which contains root level fields which mutate data.
"""
type Mutation {
  """Creates a single \`Child\`."""
  createChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: CreateChildInput!
  ): CreateChildPayload

  """Creates a single \`Parent\`."""
  createParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: CreateParentInput!
  ): CreateParentPayload

  """Deletes a single \`Child\` using its globally unique id."""
  deleteChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteChildInput!
  ): DeleteChildPayload

  """Deletes a single \`Child\` using a unique key."""
  deleteChildByParentId(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteChildByParentIdInput!
  ): DeleteChildPayload

  """Deletes a single \`Parent\` using its globally unique id."""
  deleteParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteParentInput!
  ): DeleteParentPayload

  """Deletes a single \`Parent\` using a unique key."""
  deleteParentById(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: DeleteParentByIdInput!
  ): DeleteParentPayload

  """Updates a single \`Child\` using its globally unique id and a patch."""
  updateChild(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateChildInput!
  ): UpdateChildPayload

  """Updates a single \`Child\` using a unique key and a patch."""
  updateChildByParentId(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateChildByParentIdInput!
  ): UpdateChildPayload

  """Updates a single \`Parent\` using its globally unique id and a patch."""
  updateParent(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateParentInput!
  ): UpdateParentPayload

  """Updates a single \`Parent\` using a unique key and a patch."""
  updateParentById(
    """
    The exclusive input argument for this mutation. An object type, make sure to see documentation for this object’s fields.
    """
    input: UpdateParentByIdInput!
  ): UpdateParentPayload
}

"""An object with a globally unique \`ID\`."""
interface Node {
  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  nodeId: ID!
}

"""Information about pagination in a connection."""
type PageInfo {
  """When paginating forwards, the cursor to continue."""
  endCursor: Cursor

  """When paginating forwards, are there more items?"""
  hasNextPage: Boolean!

  """When paginating backwards, are there more items?"""
  hasPreviousPage: Boolean!

  """When paginating backwards, the cursor to continue."""
  startCursor: Cursor
}

type Parent implements Node {
  """Reads a single \`Child\` that is related to this \`Parent\`."""
  childByParentId: Child
  id: Int!
  name: String!

  """
  A globally unique identifier. Can be used in various places throughout the system to identify this single value.
  """
  nodeId: ID!
}

"""
A condition to be used against \`Parent\` object types. All fields are tested for equality and combined with a logical ‘and.’
"""
input ParentCondition {
  """Checks for equality with the object’s \`id\` field."""
  id: Int

  """Checks for equality with the object’s \`name\` field."""
  name: String
}

"""An input for mutations affecting \`Parent\`"""
input ParentInput {
  childrenUsingId: ChildParentFkeyInverseInput
  id: Int
  name: String!
}

"""The globally unique \`ID\` look up for the row to connect."""
input ParentNodeIdConnect {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be connected.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to delete."""
input ParentNodeIdDelete {
  """
  The globally unique \`ID\` which identifies a single \`parent\` to be deleted.
  """
  nodeId: ID!
}

"""The globally unique \`ID\` look up for the row to update."""
input ParentOnChildForChildParentFkeyNodeIdUpdate {
  """
  An object where the defined keys will be set on the \`child\` being updated.
  """
  childPatch: ChildPatch!

  """
  The globally unique \`ID\` which identifies a single \`child\` to be connected.
  """
  nodeId: ID!
}

"""The fields on \`parent\` to look up the row to update."""
input ParentOnChildForChildParentFkeyUsingParentPkeyUpdate {
  id: Int!

  """
  An object where the defined keys will be set on the \`parent\` being updated.
  """
  parentPatch: updateParentOnChildForChildParentFkeyPatch!
}

"""The fields on \`parent\` to look up the row to connect."""
input ParentParentPkeyConnect {
  id: Int!
}

"""The fields on \`parent\` to look up the row to delete."""
input ParentParentPkeyDelete {
  id: Int!
}

"""
Represents an update to a \`Parent\`. Fields that are set will be updated.
"""
input ParentPatch {
  childrenUsingId: ChildParentFkeyInverseInput
  id: Int
  name: String
}

"""A connection to a list of \`Parent\` values."""
type ParentsConnection {
  """
  A list of edges which contains the \`Parent\` and cursor to aid in pagination.
  """
  edges: [ParentsEdge]!

  """A list of \`Parent\` objects."""
  nodes: [Parent]!

  """Information to aid in pagination."""
  pageInfo: PageInfo!

  """The count of *all* \`Parent\` you could get from the connection."""
  totalCount: Int!
}

"""A \`Parent\` edge in the connection."""
type ParentsEdge {
  """A cursor for use in pagination."""
  cursor: Cursor

  """The \`Parent\` at the end of the edge."""
  node: Parent
}

"""Methods to use when ordering \`Parent\`."""
enum ParentsOrderBy {
  ID_ASC
  ID_DESC
  NAME_ASC
  NAME_DESC
  NATURAL
  PRIMARY_KEY_ASC
  PRIMARY_KEY_DESC
}

"""The root query type which gives access points into the data universe."""
type Query implements Node {
  """Reads and enables pagination through a set of \`Child\`."""
  allChildren(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ChildCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!] = [PRIMARY_KEY_ASC]
  ): ChildrenConnection

  """Reads and enables pagination through a set of \`Parent\`."""
  allParents(
    """Read all values in the set after (below) this cursor."""
    after: Cursor

    """Read all values in the set before (above) this cursor."""
    before: Cursor

    """
    A condition to be used in determining which values should be returned by the collection.
    """
    condition: ParentCondition

    """Only read the first \`n\` values of the set."""
    first: Int

    """Only read the last \`n\` values of the set."""
    last: Int

    """
    Skip the first \`n\` values from our \`after\` cursor, an alternative to cursor
    based pagination. May not be used with \`last\`.
    """
    offset: Int

    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!] = [PRIMARY_KEY_ASC]
  ): ParentsConnection

  """Reads a single \`Child\` using its globally unique \`ID\`."""
  child(
    """The globally unique \`ID\` to be used in selecting a single \`Child\`."""
    nodeId: ID!
  ): Child

  """Get a single \`Child\`."""
  childByParentId(parentId: Int!): Child

  """Fetches an object given its globally unique \`ID\`."""
  node(
    """The globally unique \`ID\`."""
    nodeId: ID!
  ): Node

  """
  The root query type must be a \`Node\` to work well with Relay 1 mutations. This just resolves to \`query\`.
  """
  nodeId: ID!

  """Reads a single \`Parent\` using its globally unique \`ID\`."""
  parent(
    """The globally unique \`ID\` to be used in selecting a single \`Parent\`."""
    nodeId: ID!
  ): Parent

  """Get a single \`Parent\`."""
  parentById(id: Int!): Parent

  """
  Exposes the root query type nested one level down. This is helpful for Relay 1
  which can only query top level fields if they are in a particular form.
  """
  query: Query!
}

"""All input for the \`updateChildByParentId\` mutation."""
input UpdateChildByParentIdInput {
  """
  An object where the defined keys will be set on the \`Child\` being updated.
  """
  childPatch: ChildPatch!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  parentId: Int!
}

"""All input for the \`updateChild\` mutation."""
input UpdateChildInput {
  """
  An object where the defined keys will be set on the \`Child\` being updated.
  """
  childPatch: ChildPatch!

  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Child\` to be updated.
  """
  nodeId: ID!
}

"""The output of our update \`Child\` mutation."""
type UpdateChildPayload {
  """The \`Child\` that was updated by this mutation."""
  child: Child

  """An edge for our \`Child\`. May be used by Relay 1."""
  childEdge(
    """The method to use when ordering \`Child\`."""
    orderBy: [ChildrenOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ChildrenEdge

  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """Reads a single \`Parent\` that is related to this \`Child\`."""
  parentByParentId: Parent

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""All input for the \`updateParentById\` mutation."""
input UpdateParentByIdInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String
  id: Int!

  """
  An object where the defined keys will be set on the \`Parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""All input for the \`updateParent\` mutation."""
input UpdateParentInput {
  """
  An arbitrary string value with no semantic meaning. Will be included in the
  payload verbatim. May be used to track mutations by the client.
  """
  clientMutationId: String

  """
  The globally unique \`ID\` which will identify a single \`Parent\` to be updated.
  """
  nodeId: ID!

  """
  An object where the defined keys will be set on the \`Parent\` being updated.
  """
  parentPatch: ParentPatch!
}

"""The output of our update \`Parent\` mutation."""
type UpdateParentPayload {
  """
  The exact same \`clientMutationId\` that was provided in the mutation input,
  unchanged and unused. May be used by a client to track mutations.
  """
  clientMutationId: String

  """The \`Parent\` that was updated by this mutation."""
  parent: Parent

  """An edge for our \`Parent\`. May be used by Relay 1."""
  parentEdge(
    """The method to use when ordering \`Parent\`."""
    orderBy: [ParentsOrderBy!]! = [PRIMARY_KEY_ASC]
  ): ParentsEdge

  """
  Our root query field type. Allows us to run any query from our mutation payload.
  """
  query: Query
}

"""
An object where the defined keys will be set on the \`child\` being updated.
"""
input updateChildOnChildForChildParentFkeyPatch {
  name: String
  parentToParentId: ChildParentFkeyInput
}

"""
An object where the defined keys will be set on the \`parent\` being updated.
"""
input updateParentOnChildForChildParentFkeyPatch {
  childrenUsingId: ChildParentFkeyInverseInput
  id: Int
  name: String
}
`;
